--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -767,3 +767,40 @@ footer a:hover {
     height: 100%;
     border: none;
 }
+
+.payment-form-card {
+    max-width: 100%;
+    background: #FFFFFF;
+    box-shadow: 0 8px 16px rgba(88, 111, 146, 0.24), 0 2px 6px rgba(88, 111, 146, 0.24);
+    border-radius: 16px;
+    box-sizing: border-box;
+    margin: 0 auto;
+    padding: 15px;
+}
+
+.payment-form-card .title {
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 43px;
+    color: #45484D;
+}
+
+#purchase-btn {
+    width: 100%;
+    background-color: #3D6299;
+    border-radius: 4px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 32px;
+    text-align: center;
+    color: #CFD8E6;
+}
+
+#purchase-btn:hover {
+    background-color: #2e4b75;
+}
+
+nav.navbar .container .navbar-header a.navbar-brand img, nav.navbar .container .navbar-header a.navbar-brand svg {
+    width: 120px;
+}
